# colorsim

./: CMakeLists.txt  colorsim.cpp  colorsim.hpp
src/: colorsim.cpp  colorsim.hpp
